# live-playwright

./: README.md  pyproject.toml
live_playwright/: exemplo_00.py
