[tool.poetry]
name = "live-playwright"
version = "0.1.0"
description = ""
authors = ["Rafael França <francadev@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
